Use sqlite3 in development

--- a/config/database.yml
+++ b/config/database.yml
@@ -21,8 +21,10 @@ default: &default
 
 
 development:
-  <<: *default
+  adapter: sqlite3
+  pool: 5
   database: myapp_development
+  timeout: 5000
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
